feat: add headers and test S4RefSimTool class

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "\n",
     "class S4RefSimTool:\n",
-    "    def __init__(self, config, output_folder=\"output\"):\n",
+    "    def __init__(self, config_filename, output_folder=\"output\"):\n",
     "        \"\"\"Simulate CMB-S4 maps based on the experiment configuration\n",
     "\n",
     "        Parameters\n",
@@ -110,15 +110,15 @@
     "        output_folder : str or Path\n",
     "            Output path\n",
     "        \"\"\"\n",
-    "        self.config = toml.load(config)\n",
+    "        self.config_filename = config_filename\n",
+    "        self.config = toml.load(self.config_filename)\n",
     "        self.output_filename_template = (\n",
     "            \"cmbs4_{tag}_KCMB_{telescope}-{band}_nside{nside}_{split}_of_{nsplits}.fits\"\n",
     "        )\n",
     "        self.output_folder = Path(output_folder)\n",
+    "        self.output_folder.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "    def run(\n",
-    "        self, channels=\"all\", sites=[\"Pole\", \"Chile\"], nsplits=1, write_outputs=True\n",
-    "    ):\n",
+    "    def run(self, channels=\"all\", sites=[\"Pole\", \"Chile\"], write_outputs=True):\n",
     "        \"\"\"Run the simulation\n",
     "\n",
     "        Parameters\n",
@@ -130,14 +130,10 @@
     "            * \"all\" (default)\n",
     "        site : list[str]\n",
     "            ['Pole'] or ['Chile'], by default [\"Pole\", \"Chile\"]\n",
-    "        nsplits : int\n",
-    "            Number of splits, 1 generates only full mission\n",
-    "            2-7 generates the full mission map and then the requested number\n",
-    "            of splits scaled accordingly. E.g. 7 generates the full mission\n",
-    "            map and 7 equal (yearly) maps\n",
     "        write_outputs : bool\n",
     "            if True write the outputs to disk, if False return them (not implemented yet)\n",
     "        \"\"\"\n",
+    "        nsplits = self.config[\"experiment\"].get(\"number_of_splits\", 1)\n",
     "        assert (\n",
     "            nsplits < 8\n",
     "        ), \"We currently only have 7 independent realizations of atmosphere and noise\"\n",
@@ -175,12 +171,69 @@
     "                            self.output_folder / output_filename,\n",
     "                            output_map,\n",
     "                            column_units=\"K_CMB\",\n",
-    "                            extra_header={\"tool_version\": __version__},\n",
+    "                            extra_header=[\n",
+    "                                (\"SOFTWARE\", \"s4refsimtool\"),\n",
+    "                                (\"SW_VERS\", __version__),\n",
+    "                                (\"SKY_VERS\", \"1.0\"),\n",
+    "                                (\"ATM_VERS\", \"1.0\"),\n",
+    "                                (\"NOI_VERS\", \"1.0\"),\n",
+    "                                (\"DATE\", str(date.today())),\n",
+    "                                (\"CONFMD5\", md5sum(self.config_filename)),\n",
+    "                            ],\n",
     "                            coord=\"Q\",\n",
     "                            overwrite=True,\n",
     "                        )\n",
     "                    else:\n",
     "                        raise NotImplementedError(\"Only writing FITS output for now\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exports\n",
+    "\n",
+    "\n",
+    "def command_line_script(args=None):\n",
+    "\n",
+    "    import logging as log\n",
+    "\n",
+    "    log.basicConfig(level=log.INFO)\n",
+    "\n",
+    "    import argparse\n",
+    "\n",
+    "    parser = argparse.ArgumentParser(description=\"Run s4refsimtool\")\n",
+    "    parser.add_argument(\"config\", type=str, help=\"Configuration file\")\n",
+    "    parser.add_argument(\n",
+    "        \"--channels\",\n",
+    "        type=str,\n",
+    "        help=\"Channels e.g. all, SAT, LAT, LFL1 or comma separated list of channels\",\n",
+    "        required=False,\n",
+    "        default=\"all\",\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--site\",\n",
+    "        type=str,\n",
+    "        help=\"Pole, Chile or all, default all\",\n",
+    "        required=False,\n",
+    "        default=\"all\",\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--output_folder\",\n",
+    "        type=str,\n",
+    "        help=\"Output folder, optional\",\n",
+    "        required=False,\n",
+    "        default=\"output\",\n",
+    "    )\n",
+    "    res = parser.parse_args(args)\n",
+    "    if res.site == \"all\":\n",
+    "        sites = [\"Chile\", \"Pole\"]\n",
+    "    else:\n",
+    "        sites = [res.site]\n",
+    "    sim = S4RefSimTool(\"s4_reference_design.toml\", output_folder=res.output_folder)\n",
+    "    sim.run(channels=res.channels, sites=sites)"
    ]
   },
   {
@@ -216,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim.run(channels=\"LFL1\", sites=[\"Chile\"])"
+    "sim.run(channels=\"LFS1\", sites=[\"Pole\"])"
    ]
   },
   {
@@ -234,8 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_map = hp.read_map(\n",
-    "    \"output/cmbs4_sky_atmosphere_noise_KCMB_LAT-LFL1_nside4096_1_of_1.fits\", (0,1,2))"
+    "from astropy.io import fits"
    ]
   },
   {
@@ -244,7 +296,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[0], min=-1e-3, max=1e-3, unit=\"K\", title=\"Total I\")"
+    "output_map, header = hp.read_map(\n",
+    "    \"output/cmbs4_sky_atmosphere_noise_KCMB_SAT-LFS1_nside512_1_of_1.fits\", (0,1,2),\n",
+    "h=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "header_dict = {k:v for k,v in header}\n",
+    "assert header_dict[\"SW_VERS\"] == __version__\n",
+    "assert header_dict[\"SOFTWARE\"] == \"s4refsimtool\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.nanmin(output_map[1]), np.nanmax(output_map[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert np.nanmin(output_map[1]) > -1e-2 and np.nanmax(output_map[1]) < 1e-2, \\\n",
+    "    \"Amplitude check failed\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hp.mollview(output_map[0], min=-1e-4, max=1e-4, unit=\"K\", title=\"Total I\")"
    ]
   },
   {
@@ -264,20 +366,6 @@
    "source": [
     "hp.mollview(output_map[2], min=-1e-3, max=1e-3, unit=\"K\", title=\"Total U\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
