less printing, more docs

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -248,6 +248,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Telescope configuration\n",
+    "\n",
+    "Currently we constraint to have a total of 6 SAT and 3 LAT,\n",
+    "each SAT has a maximum of 3 tubes, each LAT of 19.\n",
+    "The checkbox on the right of each telescope checks that the amount of number of tubes is correct."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -278,7 +289,6 @@
    "source": [
     "telescopes = {\"SAT\":{}, \"LAT\":{}}\n",
     "for telescope, tubes in config[\"telescopes\"][\"SAT\"].items():\n",
-    "    print(telescope, tubes)\n",
     "    telescopes[\"SAT\"][telescope] = [widgets.Valid(\n",
     "    value=True, description=telescope, layout=widgets.Layout(width='120px')\n",
     "    )]\n",
@@ -331,7 +341,6 @@
    "outputs": [],
    "source": [
     "for telescope, tubes in config[\"telescopes\"][\"LAT\"].items():\n",
-    "    print(telescope, tubes)\n",
     "    telescopes[\"LAT\"][telescope] = [widgets.Valid(\n",
     "    value=True, description=telescope, layout=widgets.Layout(width='120px')\n",
     "    )]\n",
@@ -407,6 +416,15 @@
     "                if tube_type.description == \"years\":\n",
     "                    output_config[\"telescopes\"][t][telescope][tube_type.description] = int(tube_type.value)\n",
     "    return toml.dumps(output_config, preserve=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate a TOML configuration file\n",
+    "\n",
+    "Click on the button to generate the TOML file and display it."
    ]
   },
   {
