update to toml 0.10

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -401,6 +401,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "toml_decoder = toml.decoder.TomlDecoder()\n",
+    "toml_encoder = toml.TomlPreserveInlineDictEncoder()\n",
+    "\n",
     "def generate_toml():\n",
     "    output_config = {}\n",
     "    for section in [\"sky_emission\", \"experiment\"]:\n",
@@ -410,12 +413,12 @@
     "    output_config[\"telescopes\"] = {\"SAT\":{}, \"LAT\":{}}\n",
     "    for t in [\"SAT\", \"LAT\"]:\n",
     "        for telescope, tubes in telescopes[t].items():\n",
-    "            output_config[\"telescopes\"][t][telescope] = toml._get_empty_inline_table(dict)\n",
+    "            output_config[\"telescopes\"][t][telescope] = toml_decoder.get_empty_inline_table()\n",
     "            for tube_type in tubes[1:]:\n",
     "                output_config[\"telescopes\"][t][telescope][tube_type.description] = tube_type.value\n",
     "                if tube_type.description == \"years\":\n",
     "                    output_config[\"telescopes\"][t][telescope][tube_type.description] = int(tube_type.value)\n",
-    "    return toml.dumps(output_config, preserve=True)"
+    "    return toml.dumps(output_config, encoder=toml_encoder)"
    ]
   },
   {
