feat: split md5sum in file and string

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -64,11 +64,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# exports\n",
+    "\n",
     "import hashlib\n",
     "\n",
-    "def md5sum(filename):\n",
+    "def md5sum_string(string):\n",
+    "    return hashlib.md5(string.encode(\"utf-8\")).hexdigest()\n",
+    "\n",
+    "def md5sum_file(filename):\n",
     "    \"\"\"Compute md5 checksum of the contents of a file\"\"\"\n",
-    "    return hashlib.md5(open(filename,'rb').read()).hexdigest()"
+    "    return md5sum_string(open(filename,'r').read())"
    ]
   },
   {
@@ -86,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert md5sum(\"s4_reference_design.toml\") == console_md5sum[0].split()[0]"
+    "assert md5sum_file(\"s4_reference_design.toml\") == console_md5sum[0].split()[0]"
    ]
   },
   {
@@ -178,7 +183,7 @@
     "                                (\"ATM_VERS\", \"1.0\"),\n",
     "                                (\"NOI_VERS\", \"1.0\"),\n",
     "                                (\"DATE\", str(date.today())),\n",
-    "                                (\"CONFMD5\", md5sum(self.config_filename)),\n",
+    "                                (\"CONFMD5\", md5sum_file(self.config_filename)),\n",
     "                            ],\n",
     "                            coord=\"Q\",\n",
     "                            overwrite=True,\n",
