feat: get input folder from environment variable

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -36,7 +36,9 @@
    "source": [
     "# export\n",
     "\n",
-    "base_folder = \"/global/cscratch1/sd/keskital/s4sim/reference_tool/out/\""
+    "import os\n",
+    "base_folder = os.environ.get(\"S4REFSIMTOOL_INPUT\",\n",
+    "                             \"/global/cscratch1/sd/keskital/s4sim/reference_tool/out/\")"
    ]
   },
   {
