fix: number of splits should be integer

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w[\"number_of_splits\"] = widgets.BoundedFloatText(\n",
+    "w[\"number_of_splits\"] = widgets.BoundedIntText(\n",
     "    value=1,\n",
     "    min=1,\n",
     "    max=7,\n",
