feat: implementation of running simulation button and log

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -454,6 +454,129 @@
     "\n",
     "button.on_click(on_button_clicked)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "import logging\n",
+    "\n",
+    "class OutputWidgetHandler(logging.Handler):\n",
+    "    \"\"\" Custom logging handler sending logs to an output widget \"\"\"\n",
+    "\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super(OutputWidgetHandler, self).__init__(*args, **kwargs)\n",
+    "        layout = {\n",
+    "            'width': '100%',\n",
+    "            'height': '500px',\n",
+    "            'border': '1px solid black'\n",
+    "        }\n",
+    "        self.out = widgets.Output(layout=layout)\n",
+    "\n",
+    "    def emit(self, record):\n",
+    "        \"\"\" Overload of logging.Handler method \"\"\"\n",
+    "        formatted_record = self.format(record)\n",
+    "        new_output = {\n",
+    "            'name': 'stdout',\n",
+    "            'output_type': 'stream',\n",
+    "            'text': formatted_record+'\\n'\n",
+    "        }\n",
+    "        self.out.outputs = (new_output, ) + self.out.outputs\n",
+    "\n",
+    "    def show_logs(self):\n",
+    "        \"\"\" Show the logs \"\"\"\n",
+    "        display(self.out)\n",
+    "\n",
+    "    def clear_logs(self):\n",
+    "        \"\"\" Clear the current logs \"\"\"\n",
+    "        self.out.clear_output()\n",
+    "\n",
+    "\n",
+    "logger = logging.root\n",
+    "handler = OutputWidgetHandler()\n",
+    "handler.setFormatter(logging.Formatter('%(asctime)s  - [%(levelname)s] %(message)s'))\n",
+    "logger.addHandler(handler)\n",
+    "logger.setLevel(logging.INFO)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run the simulation\n",
+    "\n",
+    "Generate the output maps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from s4refsimtool.cli import md5sum_string, S4RefSimTool\n",
+    "from pathlib import Path\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_simulation():\n",
+    "    \n",
+    "    toml_string = generate_toml()\n",
+    "    md5sum = md5sum_string(toml_string)\n",
+    "\n",
+    "    output_path = Path(\"output\") / md5sum\n",
+    "\n",
+    "    output_path.mkdir(parents=True, exist_ok=True)\n",
+    "    toml_filename = output_path / \"config.toml\"\n",
+    "\n",
+    "    with open(toml_filename, \"w\") as f:\n",
+    "        f.write(toml_string)\n",
+    "\n",
+    "    output_location = os.environ.get(\"S4REFSIMTOOL_OUTPUT_URL\", \"\")\n",
+    "\n",
+    "    sim = S4RefSimTool(toml_filename, output_folder=output_path)\n",
+    "    sim.run(channels=\"LFS1\", sites=[\"Pole\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_button = widgets.Button(\n",
+    "    description='Generate the maps',\n",
+    "    disabled=False,\n",
+    "    button_style='danger', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Click me',\n",
+    "    icon='check'\n",
+    ")\n",
+    "\n",
+    "handler.clear_logs()\n",
+    "display(run_button, handler.out)\n",
+    "\n",
+    "def on_run_button_clicked(_):\n",
+    "    run_simulation()\n",
+    "\n",
+    "\n",
+    "run_button.on_click(on_run_button_clicked)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
