--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -9,6 +9,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For support requests, [open an issue on the `s4refsimtool` repository](https://github.com/CMB-S4/s4refsimtool/issues)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
