feat: check if simulation already available

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -443,6 +443,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "output_location = os.environ.get(\"S4REFSIMTOOL_OUTPUT_URL\", \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "button = widgets.Button(\n",
     "    description='Generate TOML',\n",
     "    disabled=False,\n",
@@ -450,14 +460,26 @@
     "    tooltip='Click me',\n",
     "    icon='check'\n",
     ")\n",
+    "output_label = widgets.HTML(value=\"\")\n",
     "output = widgets.Output(layout={'border': '1px solid black'})\n",
     "\n",
-    "display(button, output)\n",
+    "display(button, output_label, output)\n",
     "\n",
     "def on_button_clicked(b):\n",
     "    output.clear_output()\n",
+    "    \n",
+    "    toml_string = generate_toml()\n",
+    "    md5sum = md5sum_string(toml_string)\n",
+    "\n",
+    "    output_path = Path(\"output\") / md5sum\n",
+    "    \n",
+    "    if output_path.exists():\n",
+    "        output_label.value = \"This exact CMB-S4 configuration has <b>already been executed</b><br />\" + \\\n",
+    "        f\"<a href='{output_location}/output/{md5sum}' target='blank'><button class='p-Widget jupyter-widgets jupyter-button widget-button mod-success'>Access the maps </button></a>\"\n",
+    "    output_label.value += \"<p>TOML file preview:</p>\"\n",
+    "    \n",
     "    with output:\n",
-    "        print(generate_toml())\n",
+    "        print(toml_string)\n",
     "\n",
     "button.on_click(on_button_clicked)"
    ]
