--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -547,8 +547,7 @@
    "outputs": [],
    "source": [
     "from s4refsimtool.cli import md5sum_string, S4RefSimTool\n",
-    "from pathlib import Path\n",
-    "import os"
+    "from pathlib import Path"
    ]
   },
   {
@@ -563,17 +562,20 @@
     "    md5sum = md5sum_string(toml_string)\n",
     "\n",
     "    output_path = Path(\"output\") / md5sum\n",
-    "\n",
+    "    \n",
+    "    if output_path.exists():\n",
+    "        logger.error(\"This configuration has already been executed\")\n",
+    "        return\n",
+    "    \n",
     "    output_path.mkdir(parents=True, exist_ok=True)\n",
     "    toml_filename = output_path / \"config.toml\"\n",
     "\n",
     "    with open(toml_filename, \"w\") as f:\n",
     "        f.write(toml_string)\n",
     "\n",
-    "    output_location = os.environ.get(\"S4REFSIMTOOL_OUTPUT_URL\", \"\")\n",
     "\n",
     "    sim = S4RefSimTool(toml_filename, output_folder=output_path)\n",
-    "    sim.run(channels=\"LFS1\", sites=[\"Pole\"])"
+    "    sim.run(channels=\"LFS1\", sites=[\"Pole\"])\n"
    ]
   },
   {
@@ -590,15 +592,29 @@
     "    icon='check'\n",
     ")\n",
     "\n",
+    "run_output_label = widgets.HTML(value=\"\")\n",
+    "\n",
     "handler.clear_logs()\n",
-    "display(run_button, handler.out)\n",
+    "display(run_button, run_output_label, handler.out)\n",
     "\n",
     "def on_run_button_clicked(_):\n",
+    "    run_button.disabled = True\n",
+    "    run_output_label.value = \"<p> The simulation has been launched, see the logs below, access the TOML configuration file and the maps as they are created clicking on the button </p>\" + \\\n",
+    "        f\"<a href='{output_location}/output/{md5sum}' target='blank'><button class='p-Widget jupyter-widgets jupyter-button widget-button mod-success'>Access the maps </button></a>\"\n",
+    " \n",
     "    run_simulation()\n",
-    "\n",
+    "    run_button.disabled = False\n",
+    "    \n",
     "\n",
     "run_button.on_click(on_run_button_clicked)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
