feat: download all wget script

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -575,7 +575,15 @@
     "\n",
     "\n",
     "    sim = S4RefSimTool(toml_filename, output_folder=output_path)\n",
-    "    sim.run(channels=\"LFS1\", sites=[\"Pole\"])\n"
+    "    sim.run(channels=\"LFS1\", sites=[\"Pole\"])\n",
+    "    \n",
+    "    logger.info(\"Create the wget script\")\n",
+    "    with open(output_path / \"download_all.sh\", \"w\") as f:\n",
+    "        f.write(\"#!/bin/bash\\n\")\n",
+    "        files = !ls $out\n",
+    "        for o in output_path.iterdir():\n",
+    "            if not str(o).endswith(\"sh\"):\n",
+    "                f.write(f\"wget {output_location}/output/{md5sum}/{o}\\n\")"
    ]
   },
   {
