fix: use pathlib instead of path

--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "import healpy as hp\n",
     "import numpy as np\n",
-    "from path import Path\n",
+    "from pathlib import Path\n",
     "import logging as log\n",
     "\n",
     "from s4refsimtool.core import get_telescope, base_folder, simulations_observing_efficiency"
