--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -29,7 +29,7 @@
     "import healpy as hp\n",
     "import numpy as np\n",
     "\n",
-    "from path import Path\n",
+    "from pathlib import Path\n",
     "import logging as log\n",
     "\n",
     "from s4refsimtool.core import get_telescope, base_folder"
