feat: move check file creation outside of run sim script

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -472,6 +472,7 @@
     "    md5sum = md5sum_string(toml_string)\n",
     "\n",
     "    output_path = Path(\"output\") / md5sum\n",
+    "    output_label.value = \"\"\n",
     "    \n",
     "    if output_path.exists():\n",
     "        output_label.value = \"This exact CMB-S4 configuration has <b>already been executed</b><br />\" + \\\n",
@@ -556,31 +557,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_simulation():\n",
+    "def run_simulation(toml_filename, md5sum):\n",
     "    \n",
-    "    toml_string = generate_toml()\n",
-    "    md5sum = md5sum_string(toml_string)\n",
-    "\n",
-    "    output_path = Path(\"output\") / md5sum\n",
-    "    \n",
-    "    if output_path.exists():\n",
-    "        logger.error(\"This configuration has already been executed\")\n",
-    "        return\n",
-    "    \n",
-    "    output_path.mkdir(parents=True, exist_ok=True)\n",
-    "    toml_filename = output_path / \"config.toml\"\n",
-    "\n",
-    "    with open(toml_filename, \"w\") as f:\n",
-    "        f.write(toml_string)\n",
-    "\n",
-    "\n",
     "    sim = S4RefSimTool(toml_filename, output_folder=output_path)\n",
     "    sim.run(channels=\"LFS1\", sites=[\"Pole\"])\n",
     "    \n",
     "    logger.info(\"Create the wget script\")\n",
     "    with open(output_path / \"download_all.sh\", \"w\") as f:\n",
     "        f.write(\"#!/bin/bash\\n\")\n",
-    "        files = !ls $out\n",
     "        for o in output_path.iterdir():\n",
     "            if not str(o).endswith(\"sh\"):\n",
     "                f.write(f\"wget {output_location}/output/{md5sum}/{o}\\n\")"
@@ -593,7 +577,7 @@
    "outputs": [],
    "source": [
     "run_button = widgets.Button(\n",
-    "    description='Generate the maps',\n",
+    "    description='Create the maps',\n",
     "    disabled=False,\n",
     "    button_style='danger', # 'success', 'info', 'warning', 'danger' or ''\n",
     "    tooltip='Click me',\n",
@@ -607,22 +591,32 @@
     "\n",
     "def on_run_button_clicked(_):\n",
     "    run_button.disabled = True\n",
+    "\n",
+    "    toml_string = generate_toml()\n",
+    "    md5sum = md5sum_string(toml_string)\n",
+    "\n",
+    "    output_path = Path(\"output\") / md5sum\n",
+    "    \n",
+    "    if output_path.exists():\n",
+    "        logger.error(\"This configuration has already been executed\")\n",
+    "        run_button.disabled = False\n",
+    "        return\n",
+    "    \n",
+    "    output_path.mkdir(parents=True, exist_ok=True)\n",
+    "    toml_filename = output_path / \"config.toml\"\n",
+    "\n",
+    "    with open(toml_filename, \"w\") as f:\n",
+    "        f.write(toml_string)\n",
+    "        \n",
     "    run_output_label.value = \"<p> The simulation has been launched, see the logs below, access the TOML configuration file and the maps as they are created clicking on the button </p>\" + \\\n",
     "        f\"<a href='{output_location}/output/{md5sum}' target='blank'><button class='p-Widget jupyter-widgets jupyter-button widget-button mod-success'>Access the maps </button></a>\"\n",
     " \n",
-    "    run_simulation()\n",
+    "    run_simulation(toml_filename, md5sum)\n",
     "    run_button.disabled = False\n",
     "    \n",
     "\n",
     "run_button.on_click(on_run_button_clicked)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
