shorten the widgets tag

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -46,7 +46,7 @@
     "    min=0,\n",
     "    max=1,\n",
     "    step=0.01,\n",
-    "    description=f'{emission}:',\n",
+    "    description='Weight:',\n",
     "        disabled=False\n",
     "    )"
    ]
@@ -63,7 +63,7 @@
     "    min=0,\n",
     "    max=1,\n",
     "    step=1e-5,\n",
-    "    description=f'{emission}:',\n",
+    "    description=f'r:',\n",
     "        disabled=False\n",
     "    )\n"
    ]
