fix: get output path

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -558,7 +558,7 @@
    "outputs": [],
    "source": [
     "def run_simulation(toml_filename, md5sum):\n",
-    "    \n",
+    "    output_path = toml_filename.parents[0]\n",
     "    sim = S4RefSimTool(toml_filename, output_folder=output_path)\n",
     "    sim.run(channels=\"LFS1\", sites=[\"Pole\"])\n",
     "    \n",
@@ -567,7 +567,7 @@
     "        f.write(\"#!/bin/bash\\n\")\n",
     "        for o in output_path.iterdir():\n",
     "            if not str(o).endswith(\"sh\"):\n",
-    "                f.write(f\"wget {output_location}/output/{md5sum}/{o}\\n\")"
+    "                f.write(f\"wget {output_location}/{o}\\n\")"
    ]
   },
   {
