notice about reloading

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -12,6 +12,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If your browser doesn't visualize the widget input boxes, try reloading the page.\n",
+    "\n",
     "For support requests, [open an issue on the `s4refsimtool` repository](https://github.com/CMB-S4/s4refsimtool/issues)"
    ]
   },
