feat: renamed tool

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# s4refsimtool\n",
+    "# s4_design_sim_tool\n",
     "\n",
     "> API details."
    ]
