--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -32,7 +32,7 @@
     "from pathlib import Path\n",
     "import logging as log\n",
     "\n",
-    "from s4refsimtool.core import get_telescope, base_folder"
+    "from s4_design_sim_tool.core import get_telescope, base_folder"
    ]
   },
   {
