--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -49,13 +49,13 @@
     "import logging as log\n",
     "from datetime import date\n",
     "\n",
-    "from s4refsimtool.core import get_telescope, parse_channels\n",
+    "from s4_design_sim_tool.core import get_telescope, parse_channels\n",
     "\n",
-    "from s4refsimtool import __version__\n",
+    "from s4_design_sim_tool import __version__\n",
     "\n",
-    "from s4refsimtool.foregrounds import load_sky_emission\n",
-    "from s4refsimtool.atmosphere import load_atmosphere, get_telecope_years\n",
-    "from s4refsimtool.noise import load_noise"
+    "from s4_design_sim_tool.foregrounds import load_sky_emission\n",
+    "from s4_design_sim_tool.atmosphere import load_atmosphere, get_telecope_years\n",
+    "from s4_design_sim_tool.noise import load_noise"
    ]
   },
   {
@@ -177,7 +177,7 @@
     "                            output_map,\n",
     "                            column_units=\"K_CMB\",\n",
     "                            extra_header=[\n",
-    "                                (\"SOFTWARE\", \"s4refsimtool\"),\n",
+    "                                (\"SOFTWARE\", \"s4_design_sim_tool\"),\n",
     "                                (\"SW_VERS\", __version__),\n",
     "                                (\"SKY_VERS\", \"1.0\"),\n",
     "                                (\"ATM_VERS\", \"1.0\"),\n",
@@ -209,7 +209,7 @@
     "\n",
     "    import argparse\n",
     "\n",
-    "    parser = argparse.ArgumentParser(description=\"Run s4refsimtool\")\n",
+    "    parser = argparse.ArgumentParser(description=\"Run s4_design_sim_tool\")\n",
     "    parser.add_argument(\"config\", type=str, help=\"Configuration file\")\n",
     "    parser.add_argument(\n",
     "        \"--channels\",\n",
@@ -323,7 +323,7 @@
    "source": [
     "header_dict = {k:v for k,v in header}\n",
     "assert header_dict[\"SW_VERS\"] == __version__\n",
-    "assert header_dict[\"SOFTWARE\"] == \"s4refsimtool\""
+    "assert header_dict[\"SOFTWARE\"] == \"s4_design_sim_tool\""
    ]
   },
   {
