--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Web interface `s4refsimtool`\n",
+    "# Web interface `s4_design_sim_tool`\n",
     "> Interactive web-based user interface for the CMB-S4 reference simulation tool"
    ]
   },
@@ -14,7 +14,7 @@
    "source": [
     "If your browser doesn't visualize the widget input boxes, try reloading the page and **disable your adblocker**.\n",
     "\n",
-    "For support requests, [open an issue on the `s4refsimtool` repository](https://github.com/CMB-S4/s4refsimtool/issues)"
+    "For support requests, [open an issue on the `s4_design_sim_tool` repository](https://github.com/CMB-S4/s4_design_sim_tool/issues)"
    ]
   },
   {
@@ -549,7 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from s4refsimtool.cli import md5sum_string, S4RefSimTool\n",
+    "from s4_design_sim_tool.cli import md5sum_string, S4RefSimTool\n",
     "from pathlib import Path"
    ]
   },
