--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "# hide\n",
     "\n",
-    "from s4refsimtool.core import *"
+    "from s4_design_sim_tool.core import *"
    ]
   },
   {
