--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -35,7 +35,7 @@
     "from pathlib import Path\n",
     "import logging as log\n",
     "\n",
-    "from s4refsimtool.core import get_telescope, base_folder, simulations_observing_efficiency"
+    "from s4_design_sim_tool.core import get_telescope, base_folder, simulations_observing_efficiency"
    ]
   },
   {
