rename to design in README and index

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CMB-S4 reference simulation tool\n",
+    "# CMB-S4 design simulation tool\n",
     "> Generate CMB-S4 simulated maps of foregrounds/atmosphere and noise based on the configuration of the experiment"
    ]
   },
