added docs to notebook

--- a/index.ipynb
+++ b/index.ipynb
@@ -12,20 +12,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`s4_design_sim_tool` is a library, a command-line tool and a web interface to properly combine and weight pre-executed maps from time-domain and map-domain simulation based on input parameters and the instrument configuration (e.g. location of telescopes, distribution in frequency of the tubes).\n",
+    "\n",
     "## Configuration options\n",
     "\n",
-    "see [`s4_reference_design.toml`](s4_reference_design.toml)\n",
+    "The simulation configuration is defined by a TOML text file,\n",
+    "see for example the TOML configuration for the CMB-S4 reference design: [`s4_reference_design.toml`](https://github.com/CMB-S4/s4_design_sim_tool/blob/master/s4_reference_design.toml)\n",
+    "\n",
+    "### Sky emission\n",
+    "\n",
+    "The first section of the configuration files defines which input components should be considered,\n",
+    "it is possible to choose a weight between 0 and 1 for all components, for example we can simulate residual foregrounds after cleaning or partial de-lensing, and we can choose the tensor-to-scalar ratio `r`.\n",
+    "\n",
+    "Input maps are already top-hat bandpass integrated, beam-smoothed, and ran through a filter-and-bin mapmaking algorithm in time-domain, they are combined based on the configuration file and are not influenced by the experiment configuration.\n",
+    "For more details, see the [input maps section below](#Input-maps) and the [Jupyter notebook with the implementation](/s4_design_sim_tool/foregrounds).\n",
+    "\n",
+    "### Experiment\n",
+    "\n",
+    "The second section defines the design of the instrument, it is possible to customize the number and location of SAT and LAT telescope and for each of them modify what tube are mounting, keeping the constraint of 3 tubes for SAT and 19 for LAT.\n",
+    "\n",
+    "Scaling of atmospheric and instrument noise is performed with these assumption:\n",
+    "\n",
+    "* scale the 10-day simulations to 1 year considering the observing efficiency\n",
+    "* for Pole also consider the additional efficiency factor\n",
+    "* scale by the detector-years for noise and telescope-years for atmosphere\n",
+    "\n",
+    "Therefore 2 tubes on the same telescope have the same atmospheric noise of 1 tube, to reduce noise from the atmosphere we need to distribute tubes across multiple telescopes.\n",
+    "For instrument noise instead, it doesn't matter their distribution across telescopes, just their number.\n",
+    "\n",
+    "For more details, see the [input maps section below](#Noise-maps) and the Jupyter notebooks with the implementation for the [atmosphere](/s4_design_sim_tool/atmosphere) and [noise](/s4_design_sim_tool/noise).\n",
     "\n",
     "## Input maps\n",
     "\n",
-    "### Unfiltered sky signal\n",
+    "### Sky signal\n",
     "\n",
     "* Full-sky Nside 4096 (LAT) and Nside 512 (SAT)\n",
     "* Galactic, extragalactic and CMB\n",
     "* Bandpass integrated with tophat bandpasses from `s4sim`\n",
     "* Smoothed with gaussian beams\n",
     "\n",
-    "See the [`202002_foregrounds_extragalactic_cmb_tophat`](https://github.com/CMB-S4/s4mapbasedsims/tree/master/202002_foregrounds_extragalactic_cmb_tophat) map based simulations\n",
+    "See the [`202002_foregrounds_extragalactic_cmb_tophat`](https://github.com/CMB-S4/s4mapbasedsims/tree/master/202002_foregrounds_extragalactic_cmb_tophat) map based simulations.\n",
+    "\n",
+    "Then the maps were used as inputs for a time-domain simulation with TOAST to simulate the effect\n",
+    "of a filter-and-bin mapmaking with the CMB-S4 scanning strategy both for Pole and Chile.\n",
     "\n",
     "### Noise maps\n",
     "\n",
