link to repo and web ui

--- a/index.ipynb
+++ b/index.ipynb
@@ -14,6 +14,10 @@
    "source": [
     "`s4_design_sim_tool` is a library, a command-line tool and a web interface to properly combine and weight pre-executed maps from time-domain and map-domain simulation based on input parameters and the instrument configuration (e.g. location of telescopes, distribution in frequency of the tubes).\n",
     "\n",
+    "The software is available in the [CMB-S4/s4_design_sim_tool](https://github.com/CMB-S4/s4_design_sim_tool) repository on Github, the web interface temporarily at: \n",
+    "\n",
+    "* <http://132-249-238-90.compute.cloud.sdsc.edu/>\n",
+    "\n",
     "## Configuration options\n",
     "\n",
     "The simulation configuration is defined by a TOML text file,\n",
