--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -12,6 +12,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "See the [Documentation](https://cmb-s4.github.io/s4_design_sim_tool/)\n",
+    "\n",
     "If your browser doesn't visualize the widget input boxes, try reloading the page and **disable your adblocker**.\n",
     "\n",
     "For support requests, [open an issue on the `s4_design_sim_tool` repository](https://github.com/CMB-S4/s4_design_sim_tool/issues)"
