docs: info about splits

--- a/index.ipynb
+++ b/index.ipynb
@@ -21,7 +21,7 @@
     "## Configuration options\n",
     "\n",
     "The simulation configuration is defined by a TOML text file,\n",
-    "see for example the TOML configuration for the CMB-S4 reference design: [`s4_reference_design.toml`](https://github.com/CMB-S4/s4_design_sim_tool/blob/master/s4_reference_design.toml)\n",
+    "see for example the TOML configuration for the CMB-S4 reference design: [s4_reference_design.toml](https://github.com/CMB-S4/s4_design_sim_tool/blob/master/s4_reference_design.toml)\n",
     "\n",
     "### Sky emission\n",
     "\n",
@@ -45,6 +45,11 @@
     "For instrument noise instead, it doesn't matter their distribution across telescopes, just their number.\n",
     "\n",
     "For more details, see the [input maps section below](#Noise-maps) and the Jupyter notebooks with the implementation for the [atmosphere](/s4_design_sim_tool/atmosphere) and [noise](/s4_design_sim_tool/noise).\n",
+    "\n",
+    "#### Splits\n",
+    "\n",
+    "The tool supports loading up to 8 splits, which are suitable to simulate 1 full mission map and 7 yearly maps (or 7 interleaved splits).\n",
+    "In this case, the tool will generate first a full mission map and then the number of splits requested, loading different realizations of atmosphere and noise and weighting them properly.\n",
     "\n",
     "## Input maps\n",
     "\n",
