--- a/index.ipynb
+++ b/index.ipynb
@@ -12,9 +12,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![PyPI badge](https://img.shields.io/pypi/v/s4_design_sim_tool)\n",
+    "\n",
     "`s4_design_sim_tool` is a library, a command-line tool and a web interface to properly combine and weight pre-executed maps from time-domain and map-domain simulation based on input parameters and the instrument configuration (e.g. location of telescopes, distribution in frequency of the tubes).\n",
     "\n",
-    "The software is available in the [CMB-S4/s4_design_sim_tool](https://github.com/CMB-S4/s4_design_sim_tool) repository on Github, the web interface temporarily at: \n",
+    "The software is available in the [CMB-S4/s4_design_sim_tool](https://github.com/CMB-S4/s4_design_sim_tool) repository on Github, and can be installed locally with PyPI, it currently needs to run at NERSC to access the input maps:\n",
+    "\n",
+    "    pip install s4_design_sim_tool\n",
+    "\n",
+    "the web interface is temporarily available at: \n",
     "\n",
     "* <http://132-249-238-90.compute.cloud.sdsc.edu/>\n",
     "\n",
@@ -60,7 +66,7 @@
     "* Bandpass integrated with tophat bandpasses from `s4sim`\n",
     "* Smoothed with gaussian beams\n",
     "\n",
-    "See the [`202002_foregrounds_extragalactic_cmb_tophat`](https://github.com/CMB-S4/s4mapbasedsims/tree/master/202002_foregrounds_extragalactic_cmb_tophat) map based simulations.\n",
+    "See the [202002_foregrounds_extragalactic_cmb_tophat](https://github.com/CMB-S4/s4mapbasedsims/tree/master/202002_foregrounds_extragalactic_cmb_tophat) map based simulations.\n",
     "\n",
     "Then the maps were used as inputs for a time-domain simulation with TOAST to simulate the effect\n",
     "of a filter-and-bin mapmaking with the CMB-S4 scanning strategy both for Pole and Chile.\n",
