--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -564,7 +564,7 @@
     "def run_simulation(toml_filename, md5sum):\n",
     "    output_path = toml_filename.parents[0]\n",
     "    sim = S4RefSimTool(toml_filename, output_folder=output_path)\n",
-    "    sim.run(channels=\"LFS1\", sites=[\"Pole\"])\n",
+    "    sim.run(channels=\"all\", sites=[\"Pole\", \"Chile\"])\n",
     "    \n",
     "    logger.info(\"Create the wget script\")\n",
     "    with open(output_path / \"download_all.sh\", \"w\") as f:\n",
