feat: exported create_wget_script function

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -561,17 +561,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
+    "\n",
+    "def create_wget_script(folder, output_location):\n",
+    "    with open(folder / \"download_all.sh\", \"w\") as f:\n",
+    "        f.write(\"#!/bin/bash\\n\")\n",
+    "        for o in folder.iterdir():\n",
+    "            if not str(o).endswith(\"sh\"):\n",
+    "                f.write(f\"wget {output_location}/{o}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def run_simulation(toml_filename, md5sum):\n",
     "    output_path = toml_filename.parents[0]\n",
     "    sim = S4RefSimTool(toml_filename, output_folder=output_path)\n",
     "    sim.run(channels=\"all\", sites=[\"Pole\", \"Chile\"])\n",
     "    \n",
     "    logger.info(\"Create the wget script\")\n",
-    "    with open(output_path / \"download_all.sh\", \"w\") as f:\n",
-    "        f.write(\"#!/bin/bash\\n\")\n",
-    "        for o in output_path.iterdir():\n",
-    "            if not str(o).endswith(\"sh\"):\n",
-    "                f.write(f\"wget {output_location}/{o}\\n\")"
+    "    create_wget_script(output_path, output_location)"
    ]
   },
   {
